--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "immer": "^10.1.1",
+    "javascript-obfuscator": "^4.1.1",
+    "nextjs-obfuscator": "^3.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
